Adding course files

--- a/CarND-LaneLines-P1/P1.ipynb
+++ b/CarND-LaneLines-P1/P1.ipynb
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8b5d5bd760>"
+       "<matplotlib.image.AxesImage at 0x7f19c27ae760>"
       ]
      },
      "execution_count": 2,
@@ -641,7 +641,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "t:   9%|▊         | 19/221 [00:00<00:01, 188.43it/s, now=None]"
+      "t:   9%|▉         | 20/221 [00:00<00:01, 195.64it/s, now=None]"
      ]
     },
     {
@@ -666,8 +666,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/solidWhiteRight.mp4\n",
-      "CPU times: user 6.01 s, sys: 2.99 s, total: 9.01 s\n",
-      "Wall time: 1.54 s\n"
+      "CPU times: user 6.14 s, sys: 2.71 s, total: 8.85 s\n",
+      "Wall time: 1.47 s\n"
      ]
     }
    ],
@@ -750,8 +750,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "t:   0%|          | 0/681 [00:00<?, ?it/s, now=None]"
+      "t:   3%|▎         | 20/681 [00:00<00:03, 195.99it/s, now=None]"
      ]
     },
     {
@@ -776,8 +775,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/solidYellowLeft.mp4\n",
-      "CPU times: user 19.4 s, sys: 9.18 s, total: 28.6 s\n",
-      "Wall time: 4.65 s\n"
+      "CPU times: user 19.4 s, sys: 8.86 s, total: 28.2 s\n",
+      "Wall time: 4.55 s\n"
      ]
     }
    ],
@@ -870,7 +869,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                              \r"
+      "                                                               \r"
      ]
     },
     {
@@ -879,8 +878,8 @@
      "text": [
       "Moviepy - Done !\n",
       "Moviepy - video ready test_videos_output/challenge.mp4\n",
-      "CPU times: user 10.5 s, sys: 4.81 s, total: 15.3 s\n",
-      "Wall time: 2.99 s\n"
+      "CPU times: user 10.2 s, sys: 4.55 s, total: 14.8 s\n",
+      "Wall time: 2.83 s\n"
      ]
     }
    ],
